✨ Get a working implementation of the research groups list

--- a/frontend/src/components/ResearchGroupPanel.module.css
+++ b/frontend/src/components/ResearchGroupPanel.module.css
@@ -6,9 +6,17 @@
     gap: 20px;
 }
 
+.Access {
+    font-size: larger;
+}
+
 .Name {
     font-size: larger;
     font-weight: 600;
+    color: rgb(var(--bluelib-accent-r), var(--bluelib-accent-g), var(--bluelib-accent-b));
+}
+
+.Name * {
     color: rgb(var(--bluelib-accent-r), var(--bluelib-accent-g), var(--bluelib-accent-b));
 }
 
