🔧 Make `ResourcePanel` buttons fixed width

--- a/frontend/src/components/elements/ResourcePanel.module.css
+++ b/frontend/src/components/elements/ResourcePanel.module.css
@@ -28,4 +28,12 @@
 
 .ResourcePanel .Buttons {
     grid-area: buttons;
+
+    display: flex;
+    flex-direction: row;
+    gap: 4px;
+}
+
+.ResourcePanel .Buttons > * {
+    width: 96px;
 }
